@@ -49,7 +49,11 @@ us a note on ns-developers mailing list.  </p>
 <h2>Changes to build system:</h2>
 <ul>
 <li><b>Regression tests are no longer run using waf</b>
-<p>All regression testing is now being done in test.py.  As a result, reference traces are no longer needed in ns-3 to perform regression testing.
+<p>All regression testing is now being done in test.py.  As a result, a 
+separate reference trace repository is no longer needed to perform 
+regression tests.  Tests that require comparison against known good traces
+can still be run from test.py.  The --regression option for waf has been
+removed.
 </p>
 </ul>
 
